@@ -3,14 +3,16 @@ Hash: SHA256
 
 AUX mfs.confd 368 RMD160 74784eff195a3baf07d07505fb518bcfdd6fda9e SHA1 e47cca98f9e677bcb4a71c829294e41506010c62 SHA256 be22c70e7a40a5373d18bfe17ec5a692f50b914c5c044a121a83cfb90a680c43
 AUX mfs.initd 1284 RMD160 ebe77392558ed7bb945c06b98ae6b8efb87216f4 SHA1 3d0f3f53753b523bdc60186c85c1c874b72239b3 SHA256 ba981b336e4a2b299825f43e6f071cd87276a8ae7cc259450ba9a9394aa3cd24
+AUX mfscgiserver.confd 180 RMD160 c0871d4f71269f8e08ddfb40216666264bd31c4e SHA1 c0298da576bdd72167352cbffc7d23dff45fb408 SHA256 23ccc3ee023543a162d6b4cfb1406922597b4cd744d35b6db1f4f7ea8bc138f6
+AUX mfscgiserver.initd 396 RMD160 81cc66fedc9d0e7b324f80cce7715bca29eda907 SHA1 1456a6e3550d5c8654e9ee8e10fcb33d1638383d SHA256 e406762ce1a098e32458594e8a7a0c2a26a87df7726f274cf60aecc21a7c7da2
 DIST mfs-1.6.20.tar.gz 657147 RMD160 039863f00882678cbba44db34eb7d2e755161925 SHA1 2d163a6fb15f98ba2a7b010ac1ec33f6cba40bfe SHA256 a3bf6c992a9b5724c37dea6c76091072e22f00a749d6aecc61d8c885607246a1
-EBUILD moosefs-1.6.20-r1.ebuild 1265 RMD160 3b74fa1ac6916e7f9dcd91bf574605b98ca4f038 SHA1 4cdae667dc413b8b5c6d092feb529b589b531a7b SHA256 c17fccfb26c8e35baf7d2b1adcbdb45592a0c38ddbd6d8e25e5e3676fc5e8f1a
-MISC ChangeLog 450 RMD160 42fc733533ab6255ce51ee0fea89dfa9e67388d4 SHA1 6fe3dd891d41e040cbbcb3f802420f557fca4350 SHA256 dfec8698e62f7b572e7bd7188cdaf20eae04daea09c1574bde761dc9a23ff03c
+EBUILD moosefs-1.6.20-r2.ebuild 1401 RMD160 e5988ff8d35ed64ba2d1f3d852fdf60c515f816f SHA1 03aea6b4788864cedfa90349145a880b2b76358b SHA256 8551165641b4c010370d51353044a0460d79fc91b567575dd95ccdfec2bd22b3
+MISC ChangeLog 687 RMD160 4b764b30c9739d538449a6822d0c1db2f008bef6 SHA1 ea758c1fd9bd953e29929e1359aa8e44d2d84bbd SHA256 b6e29ae9db7a4f0385378713039b754b3e953f586ba5e2f2d6c8b2348a75e982
 MISC metadata.xml 561 RMD160 d211a5158eec236f4516d6fc4a2e6993629384f7 SHA1 5464254a876d09e3fc5cd4f858ea9a419b3c9c4f SHA256 8af3c3972cc3b105e3b7c75cd515a898e094d428a6b7133e85c052547a86b44d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk4XImgACgkQKiQSS7ZY+hNT+gEA20JY8fArVzU/aLZBtdc0cTv6
-RmqhEIRAKIYvYqoZPOQA+gOemhrqVV02KQ4HBH5lL4DtWmNqu5A7y4V/G6FwISMQ
-=ClUt
+iF4EAREIAAYFAk43ua0ACgkQKiQSS7ZY+hPgigD8DMD0KhV/0lcSeeLCanO1gvDb
+SaYS1YHzGPFoQ9uWYoIA/iQi2/ewfQ9E2IkAmJe+8QZApNcpZE1GQWEWJJDHoFAA
+=Lw+O
 -----END PGP SIGNATURE-----
