@@ -1,0 +1,21 @@
+#!/sbin/runscript
+
+PIDFILE=/var/run/mfscgiserv.pid
+
+depend() {
+	need net
+}
+
+start() {
+	ebegin "Starting mfs CGI server"
+	start-stop-daemon --start --quiet --exec /usr/sbin/mfscgiserv \
+	--pidfile "${PIDFILE}" --make-pidfile --background \
+	-- -H ${BIND_HOST} -P ${BIND_PORT} -f
+	eend $?
+}
+
+stop() {
+	ebegin "Stopping mfs CGI server"
+	start-stop-daemon --stop -q --pidfile "${PIDFILE}"
+	eend $?
+}
