@@ -1,6 +1,13 @@
 # ChangeLog for sys-cluster/moosefs
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/moosefs/ChangeLog,v 1.2 2011/07/08 15:29:35 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/moosefs/ChangeLog,v 1.3 2011/08/02 08:47:31 ultrabug Exp $
+
+*moosefs-1.6.20-r2 (02 Aug 2011)
+
+  02 Aug 2011; Ultrabug <ultrabug@gentoo.org> -moosefs-1.6.20-r1.ebuild,
+  +moosefs-1.6.20-r2.ebuild, +files/mfscgiserver.confd,
+  +files/mfscgiserver.initd:
+  Add mfs CGI server init script. drop old.
 
 *moosefs-1.6.20-r1 (08 Jul 2011)
 
